--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "deep-equal": "^2.2.3",
     "js-cookie": "^3.0.5",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
