feature: NameField,MobileField组件

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
     "amfe-flexible": "^2.2.1",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
@@ -33,7 +34,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vant": "^4.8.7",
-    "vue": "^3.3.8",
+    "vue": "^3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
